--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
     </head>
   </head>
   <body>
-    <main className="stack center">
-      <h1>Hello world</h1>
-      <p>Lorem Ipsum</p>
+    <main class="stack center">
+      <h1>Lindsay Meller</h1>
+      <p>Lorem ipsum</p>
+      <footer>Created by <a href="https://fildon.me">Rupert McKay</a></footer>
     </main>
   </body>
 </html>
