Proof of concept photo layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,25 @@
   <body>
     <main class="stack center">
       <h1>Lindsay Meller</h1>
-      <p>Lorem ipsum</p>
+      <article>
+        <p>Lorem ipsum introduction</p>
+      </article>
+      <article>
+        <img src="pictures/0umbt48c.bmp" />
+        <p>Christmas 2002</p>
+      </article>
+      <article>
+        <img src="pictures/e9cqtoya.bmp" />
+        <p>Hand written note on the back reads "1990?"</p>
+      </article>
+      <article>
+        <img src="pictures/9tdnmlkg.bmp" />
+        <p>June 2004</p>
+      </article>
+      <article>
+        <img src="pictures/earcrayo.bmp" />
+        <p>Felix's graduation</p>
+      </article>
       <footer>Created by <a href="https://fildon.me">Rupert McKay</a></footer>
     </main>
   </body>
