--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </article>
       <article>
         <img src="pictures/0umbt48c.bmp" />
-        <p>Christmas 2002</p>
+        <p>Christmas 2002 at Hotel du Vin</p>
       </article>
       <article>
         <img src="pictures/e9cqtoya.bmp" />
