Batch of photos cleaned up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta property="og:description" content="Memories of Lindsay." />
       <meta
         property="og:image"
-        content="https://raw.githubusercontent.com/fildon/lindsay/train-ride.png"
+        content="https://raw.githubusercontent.com/fildon/train-ride/main/train-ride.png"
       />
       <meta property="og:image:type" content="image/png" />
       <meta property="og:image:width" content="1280" />
@@ -29,7 +29,7 @@
       <meta name="twitter:description" content="Memories of Lindsay." />
       <meta
         name="twitter:image"
-        content="https://raw.githubusercontent.com/fildon/lindsay/train-ride.png"
+        content="https://raw.githubusercontent.com/fildon/train-ride/main/train-ride.png"
       />
       <link rel="stylesheet" href="reset.css" />
       <link rel="stylesheet" href="styles.css" />
@@ -39,23 +39,83 @@
     <main class="stack center">
       <h1>Lindsay Meller</h1>
       <article>
-        <p>Lorem ipsum introduction</p>
+        <p>
+          Lindsay was my mother. Lindsay was born in Te Awamutu, New Zealand, to
+          Alfred and Fredda Duncalfe. Lindsay was mother to Tracey, Felix and
+          Rupert. In 2017 Lindsay died to lung cancer.
+        </p>
       </article>
       <article>
-        <img src="pictures/0umbt48c.bmp" />
-        <p>Christmas 2002 at Hotel du Vin</p>
+        <img src="pictures/youngalfred.jpg" loading="lazy" />
+        <p>
+          Alfred Duncalfe. Very faint text reads: "Alfred between two and
+          three."
+        </p>
       </article>
       <article>
-        <img src="pictures/e9cqtoya.bmp" />
-        <p>Hand written note on the back reads "1990?"</p>
+        <img src="pictures/freddalake.jpg" loading="lazy" />
+        <p>
+          Fredda, the day she found out she was pregnant with her first child.
+          Hand writing on the back reads: "Taken by the avon river chch June
+          1943. <em>Isn't she beautiful!</em>".
+        </p>
       </article>
       <article>
-        <img src="pictures/9tdnmlkg.bmp" />
-        <p>June 2004</p>
+        <img src="pictures/boat.png" loading="lazy" />
+        <p>A large four-masted boat. Ship's name and date unknown.</p>
       </article>
       <article>
-        <img src="pictures/earcrayo.bmp" />
-        <p>Felix's graduation</p>
+        <img src="pictures/twincakes.jpg" loading="lazy" />
+        <p>
+          A pair of cakes, one pink and one blue. A celebration for Lindsay and
+          Ken perhaps?
+        </p>
+      </article>
+      <article>
+        <img src="pictures/siblings.jpg" loading="lazy" />
+        <p>Lindsay, Hilary and Ken.</p>
+      </article>
+      <article>
+        <img src="pictures/duncalfeladies.jpg" loading="lazy" />
+        <p>
+          I can't tell who is on the left, perhaps Hilary? In the middle Fredda.
+          On the right Lindsay. Hand writing on the back reads: "1958 (approx)".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/duncalfes.jpg" loading="lazy" />
+        <p>Fredda and Alf outside the house in McNair Road.</p>
+      </article>
+      <article>
+        <img src="pictures/21stbirthday.jpg" loading="lazy" />
+        <p>Hand written on the back: "22/10/67 Ken Lindsay 21st Party"</p>
+      </article>
+      <article>
+        <img src="pictures/21stcakecut.jpg" loading="lazy" />
+        <p>Ken and Lindsay cut the cake at their 21st birthday.</p>
+      </article>
+      <article>
+        <img src="pictures/kenlindsay.jpg" loading="lazy" />
+        <p>Ken and Lindsay at their 21st birthday.</p>
+      </article>
+      <article>
+        <img src="pictures/lindsayfriends.jpg" loading="lazy" />
+        <p>Lindsay and friends. Possibly taken during 21st birthday party.</p>
+      </article>
+      <article>
+        <img src="pictures/lindsayplusone.jpg" loading="lazy" />
+        <p>Lindsay and unknown.</p>
+      </article>
+      <article>
+        <img src="pictures/unknown.png" loading="lazy" />
+        <p>Unknown person. Perhaps a bridesmaid?</p>
+      </article>
+      <article>
+        <img src="pictures/beach.jpg" loading="lazy" />
+        <p>
+          Rupert, Lindsay and Felix at the beach. Year unknown. Early 1990s at a
+          guess.
+        </p>
       </article>
       <footer>Created by <a href="https://fildon.me">Rupert McKay</a></footer>
     </main>
