--- a/index.html
+++ b/index.html
@@ -72,8 +72,23 @@
         </p>
       </article>
       <article>
+        <img src="pictures/mangapiko.jpg" loading="lazy" />
+        <p>
+          Fredda, Alfred and Hilary around a pram. The twins Lindsay and Ken are
+          in the pram. Hand writing on the back reads: "Taken at Mangapiko St Te
+          Awamutu."
+        </p>
+      </article>
+      <article>
         <img src="pictures/siblings.jpg" loading="lazy" />
         <p>Lindsay, Hilary and Ken.</p>
+      </article>
+      <article>
+        <img src="pictures/siblings1949.jpg" loading="lazy" />
+        <p>
+          Lindsay, Hilary and Ken. Hand writing on the back reads: "all set to
+          go 1949".
+        </p>
       </article>
       <article>
         <img src="pictures/duncalfeladies.jpg" loading="lazy" />
@@ -83,8 +98,11 @@
         </p>
       </article>
       <article>
-        <img src="pictures/duncalfes.jpg" loading="lazy" />
-        <p>Fredda and Alf outside the house in McNair Road.</p>
+        <img src="pictures/car1968.jpg" loading="lazy" />
+        <p>
+          Three unknown kids and Lindsay. Hand writing on the back reads: "18th
+          Mar, 1968"
+        </p>
       </article>
       <article>
         <img src="pictures/21stbirthday.jpg" loading="lazy" />
@@ -111,11 +129,37 @@
         <p>Unknown person. Perhaps a bridesmaid?</p>
       </article>
       <article>
+        <img src="pictures/duncalfes.jpg" loading="lazy" />
+        <p>Fredda and Alf outside the house in McNair Road.</p>
+      </article>
+      <article>
+        <img src="pictures/lindsayandfriends.jpg" loading="lazy" />
+        <p>
+          A pair of photos. In the top is Lindsay and friend Sally. In the
+          bottom is unknown and Lindsay.
+        </p>
+      </article>
+      <article>
+        <img src="pictures/thermal1990.jpg" loading="lazy" />
+        <p>
+          Lindsay in water. Hand writing on the back reads: "Natural thermal
+          waterhole near Waiotapu 8th January 1990".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/lindsay1990.jpg" loading="lazy" />
+        <p>Lindsay. Hand writing on the back reads: "1990?"</p>
+      </article>
+      <article>
         <img src="pictures/beach.jpg" loading="lazy" />
         <p>
           Rupert, Lindsay and Felix at the beach. Year unknown. Early 1990s at a
           guess.
         </p>
+      </article>
+      <article>
+        <img src="pictures/june2004.jpg" loading="lazy" />
+        <p>Lindsay. Hand writing on the back reads: "June 2004".</p>
       </article>
       <footer>Created by <a href="https://fildon.me">Rupert McKay</a></footer>
     </main>
