--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
           Alfred and Fredda Duncalfe. Lindsay was mother to Tracey, Felix and
           Rupert. In 2017 Lindsay died to lung cancer.
         </p>
+        <p>
+          I have aimed to order photos chronologically, name all pictured
+          individuals, and include any written text on the back of each photo in
+          the description. I have likely made some mistakes. Let me know if you
+          can help me fill in blanks, or make corrections. Get in touch with me
+          via email at maxfmckay@gmail.com
+        </p>
       </article>
       <article>
         <img src="pictures/youngalfred.jpg" loading="lazy" />
@@ -63,6 +70,10 @@
       <article>
         <img src="pictures/boat.png" loading="lazy" />
         <p>A large four-masted boat. Ship's name and date unknown.</p>
+      </article>
+      <article>
+        <img src="pictures/baby.jpg" loading="lazy" />
+        <p>I'm guessing, but I think this must be Hilary.</p>
       </article>
       <article>
         <img src="pictures/twincakes.jpg" loading="lazy" />
@@ -91,6 +102,13 @@
         </p>
       </article>
       <article>
+        <img src="pictures/lindsaykencostumes.jpg" loading="lazy" />
+        <p>
+          Lindsay and Ken in costumes. Stamp on the back reads: "NELSON IRVING
+          Photographer - Te Awamutu".
+        </p>
+      </article>
+      <article>
         <img src="pictures/duncalfeladies.jpg" loading="lazy" />
         <p>
           I can't tell who is on the left, perhaps Hilary? In the middle Fredda.
@@ -98,10 +116,10 @@
         </p>
       </article>
       <article>
-        <img src="pictures/car1968.jpg" loading="lazy" />
+        <img src="pictures/familygathering.jpg" loading="lazy" />
         <p>
-          Three unknown kids and Lindsay. Hand writing on the back reads: "18th
-          Mar, 1968"
+          Top row: ?, ?, Ken. Middle row: ?, Lindsay, ?, Fredda. Bottom row: ?,
+          ?, ?. Hand writing on the back reads: "At westgate farm. Jan 61"
         </p>
       </article>
       <article>
@@ -121,12 +139,27 @@
         <p>Lindsay and friends. Possibly taken during 21st birthday party.</p>
       </article>
       <article>
+        <img src="pictures/car1968.jpg" loading="lazy" />
+        <p>
+          Three unknown kids and Lindsay. Hand writing on the back reads: "18th
+          Mar, 1968"
+        </p>
+      </article>
+      <article>
         <img src="pictures/lindsayplusone.jpg" loading="lazy" />
         <p>Lindsay and unknown.</p>
       </article>
       <article>
-        <img src="pictures/unknown.png" loading="lazy" />
-        <p>Unknown person. Perhaps a bridesmaid?</p>
+        <img src="pictures/hilarybridesmaid.png" loading="lazy" />
+        <p>Hilary. Appears to be dressed as a bridesmaid.</p>
+      </article>
+      <article>
+        <img src="pictures/hilary.jpg" loading="lazy" />
+        <p>Hilary.</p>
+      </article>
+      <article>
+        <img src="pictures/lindsaybridesmaid.jpg" loading="lazy" />
+        <p>Lindsay. Dressed as a bridesmaid.</p>
       </article>
       <article>
         <img src="pictures/duncalfes.jpg" loading="lazy" />
@@ -137,6 +170,13 @@
         <p>
           A pair of photos. In the top is Lindsay and friend Sally. In the
           bottom is unknown and Lindsay.
+        </p>
+      </article>
+      <article>
+        <img src="pictures/valentines1988.jpg" loading="lazy" />
+        <p>
+          Lindsay McKay, Lindsay Meller, Rupert and Felix. Hand writing on the
+          back reads: "14 Feb 1988 Valentine's day party".
         </p>
       </article>
       <article>
@@ -155,6 +195,15 @@
         <p>
           Rupert, Lindsay and Felix at the beach. Year unknown. Early 1990s at a
           guess.
+        </p>
+      </article>
+      <article>
+        <img src="pictures/dutchcricket1997.jpg" loading="lazy" />
+        <p>
+          Lindsay in the foreground. Two unknowns in the background. Hand
+          writing on the back reads: "On tour cricket v Dutch Parliament".
+          Additionally a stamp reads: "27 JUNI 1997". "JUNI" is Dutch for
+          "JUNE".
         </p>
       </article>
       <article>
