--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
         </p>
       </article>
       <article>
+        <img src="pictures/duncalfefamily.jpg" loading="lazy" />
+        <p>Ken, Lindsay, Alf, Hilary, and Fredda.</p>
+      </article>
+      <article>
         <img src="pictures/familygathering.jpg" loading="lazy" />
         <p>
           Top row: ?, ?, Ken. Middle row: ?, Lindsay, ?, Fredda. Bottom row: ?,
@@ -139,10 +143,31 @@
         <p>Lindsay and friends. Possibly taken during 21st birthday party.</p>
       </article>
       <article>
+        <img src="pictures/fishing1967.jpg" loading="lazy" />
+        <p>
+          Lindsay goes fishing. Hand writing on the back reads: "The first and
+          the Biggest February, Manly '67".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/siblings1967.jpg" loading="lazy" />
+        <p>
+          Ken and Lindsay. Hand writing on the back reads: "Front steps of 2
+          Ngaire Ave., Epsom 23rd July 1967".
+        </p>
+      </article>
+      <article>
         <img src="pictures/car1968.jpg" loading="lazy" />
         <p>
           Three unknown kids and Lindsay. Hand writing on the back reads: "18th
           Mar, 1968"
+        </p>
+      </article>
+      <article>
+        <img src="pictures/teacher.jpg" loading="lazy" />
+        <p>
+          Lindsay teaching class. Three boys are in shot too. Hand writing on
+          the back reads: "Belfast School 1968".
         </p>
       </article>
       <article>
@@ -173,10 +198,37 @@
         </p>
       </article>
       <article>
+        <img src="pictures/wine.jpg" loading="lazy" />
+        <p>Lindsay enjoying a bottle of wine.</p>
+      </article>
+      <article>
+        <img src="pictures/wedding1981.jpg" loading="lazy" />
+        <p>
+          Hugh Meller and Lindsay get married. Hand writing on the back reads:
+          "03.07.1981"
+        </p>
+      </article>
+      <article>
+        <img src="pictures/felixlindsay1983.jpg" loading="lazy" />
+        <p>
+          Felix and Lindsay. Hand writing on the back reads: "23 April '83".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/kitchen1983.jpg" loading="lazy" />
+        <p>Felix and Lindsay. Hand writing on the back reads: "1983".</p>
+      </article>
+      <article>
         <img src="pictures/valentines1988.jpg" loading="lazy" />
         <p>
           Lindsay McKay, Lindsay Meller, Rupert and Felix. Hand writing on the
           back reads: "14 Feb 1988 Valentine's day party".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/kids1988.jpg" loading="lazy" />
+        <p>
+          Felix, Lindsay, and Rupert. Hand writing on the back reads: "Sept 88?"
         </p>
       </article>
       <article>
@@ -198,6 +250,13 @@
         </p>
       </article>
       <article>
+        <img src="pictures/family1995.jpg" loading="lazy" />
+        <p>
+          Lindsay, Rupert, and Felix. Hand writing on the back reads: "C.May
+          1995".
+        </p>
+      </article>
+      <article>
         <img src="pictures/dutchcricket1997.jpg" loading="lazy" />
         <p>
           Lindsay in the foreground. Two unknowns in the background. Hand
@@ -209,6 +268,12 @@
       <article>
         <img src="pictures/june2004.jpg" loading="lazy" />
         <p>Lindsay. Hand writing on the back reads: "June 2004".</p>
+      </article>
+      <article>
+        <img src="pictures/healeys2004.jpg" loading="lazy" />
+        <p>
+          Hand writing on the back reads: "with Dennis & Edna Healey June 2004"
+        </p>
       </article>
       <footer>Created by <a href="https://fildon.me">Rupert McKay</a></footer>
     </main>
