--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
         </p>
       </article>
       <article>
+        <img src="pictures/10months.jpg" loading="lazy" />
+        <p>
+          Lindsay and Ken in a pram. Hand writing on the back reads: "10
+          months".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/12months.jpg" loading="lazy" />
+        <p>
+          Ken, Hilary, and Lindsay. Hand writing on the back reads: "12 months".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/babylindsay.jpg" loading="lazy" />
+        <p>
+          Lindsay with a teddy bear. Hand writing on the back reads: "Lindsay
+          aged 13 months".
+        </p>
+      </article>
+      <article>
         <img src="pictures/siblings.jpg" loading="lazy" />
         <p>Lindsay, Hilary and Ken.</p>
       </article>
@@ -124,6 +144,13 @@
         <p>
           Top row: ?, ?, Ken. Middle row: ?, Lindsay, ?, Fredda. Bottom row: ?,
           ?, ?. Hand writing on the back reads: "At westgate farm. Jan 61"
+        </p>
+      </article>
+      <article>
+        <img src="pictures/peterlindsay1963.jpg" loading="lazy" />
+        <p>
+          Hand writing on the back reads: "Sec. School Charity Ball Hamilton.
+          Peter Craig + Lins June 1963".
         </p>
       </article>
       <article>
@@ -175,6 +202,10 @@
         <p>Lindsay and unknown.</p>
       </article>
       <article>
+        <img src="pictures/party.jpg" loading="lazy" />
+        <p>Lindsay and unknown.</p>
+      </article>
+      <article>
         <img src="pictures/hilarybridesmaid.png" loading="lazy" />
         <p>Hilary. Appears to be dressed as a bridesmaid.</p>
       </article>
@@ -202,6 +233,21 @@
         <p>Lindsay enjoying a bottle of wine.</p>
       </article>
       <article>
+        <img src="pictures/garter1975.jpg" loading="lazy" />
+        <p>
+          Hand writing on the back reads: "22.10.75 at my birthday party in the
+          office. Knickers, suspender belt & Christian Dior Stockings on display
+          were the presents to me from the office."
+        </p>
+      </article>
+      <article>
+        <img src="pictures/weddinglindsay1981.jpg" loading="lazy" />
+        <p>
+          Lindsay at her wedding with a bottle of wine. Hand writing on the back
+          reads: "03.07.1981".
+        </p>
+      </article>
+      <article>
         <img src="pictures/wedding1981.jpg" loading="lazy" />
         <p>
           Hugh Meller and Lindsay get married. Hand writing on the back reads:
@@ -215,8 +261,27 @@
         </p>
       </article>
       <article>
+        <img src="pictures/walking1983.jpg" loading="lazy" />
+        <p>Felix and Lindsay. Hand writing on the back reads: "May 29 '83".</p>
+      </article>
+      <article>
         <img src="pictures/kitchen1983.jpg" loading="lazy" />
         <p>Felix and Lindsay. Hand writing on the back reads: "1983".</p>
+      </article>
+      <article>
+        <img src="pictures/gatheringlate80s.jpg" loading="lazy" />
+        <p>
+          A large family gathering. Back row: Rupert, Lindsay, Lindsay, ?, Jill,
+          Alf, ?, ?, ?, Ken, ?. Front row: Felix, Amber, Renay, Luke, ?, ?.
+        </p>
+      </article>
+      <article>
+        <img src="pictures/parents.jpg" loading="lazy" />
+        <p>
+          Lindsay, Rupert, and Lindsay. Hand writing on the back reads: "Simcha.
+          N & M. Kathy. Jean. Debbie." I don't understand why that is what is
+          written on the back.
+        </p>
       </article>
       <article>
         <img src="pictures/valentines1988.jpg" loading="lazy" />
@@ -266,6 +331,25 @@
         </p>
       </article>
       <article>
+        <img src="pictures/christmas.jpg" loading="lazy" />
+        <p>
+          Lindsay and Toni at Christmas. Likely taken at 117 St. James Road,
+          Southampton.
+        </p>
+      </article>
+      <article>
+        <img src="pictures/christmas2002.jpg" loading="lazy" />
+        <p>
+          Christmas at Hotel du Vin in Winchester. Seated: ?, Lindsay, Felix,
+          Rupert, Jeanie, Toni, Corin. Hand writing on the back reads: "Xmas
+          2002."
+        </p>
+      </article>
+      <article>
+        <img src="pictures/lindsayalf.jpg" loading="lazy" />
+        <p>Lindsay and Alf. Likely taken during 2003.</p>
+      </article>
+      <article>
         <img src="pictures/june2004.jpg" loading="lazy" />
         <p>Lindsay. Hand writing on the back reads: "June 2004".</p>
       </article>
@@ -273,6 +357,20 @@
         <img src="pictures/healeys2004.jpg" loading="lazy" />
         <p>
           Hand writing on the back reads: "with Dennis & Edna Healey June 2004"
+        </p>
+      </article>
+      <article>
+        <img src="pictures/felixgraduation.jpg" loading="lazy" />
+        <p>
+          Lindsay and Felix at his graduation. Hand writing on the back reads:
+          "nov 2004".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/graduationcollage.jpg" loading="lazy" />
+        <p>
+          A collage of photos from Felix's graduation. Some printer ink appears
+          to have run in splotches on the upper left.
         </p>
       </article>
       <footer>Created by <a href="https://fildon.me">Rupert McKay</a></footer>
