Minor description update

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       <article>
         <img src="pictures/duncalfeladies.jpg" loading="lazy" />
         <p>
-          I can't tell who is on the left, perhaps Hilary? In the middle Fredda.
-          On the right Lindsay. Hand writing on the back reads: "1958 (approx)".
+          Hilary, Fredda, and Lindsay. Hand writing on the back reads: "1958
+          (approx)".
         </p>
       </article>
       <article>
