Intro description update

--- a/index.html
+++ b/index.html
@@ -40,16 +40,27 @@
       <h1>Lindsay Meller</h1>
       <article>
         <p>
-          Lindsay was my mother. Lindsay was born in Te Awamutu, New Zealand, to
-          Alfred and Fredda Duncalfe. Lindsay was mother to Tracey, Felix and
-          Rupert. In 2005 Lindsay died to lung cancer.
+          This project was initiated by me, Rupert Foggo McKay, while archiving
+          a box of family photos belonging to my mother, Lindsay Meller. It aims
+          to document and preserve these photos for the benefit of all friends
+          and family. Feel free to share this webpage with anyone it may be of
+          interest to.
         </p>
         <p>
           I have aimed to order photos chronologically, name all pictured
           individuals, and include any written text on the back of each photo in
           the description. I have likely made some mistakes. Let me know if you
-          can help me fill in blanks, or make corrections. Get in touch with me
-          via email at maxfmckay@gmail.com
+          can help me fill in blanks, or make corrections. Additionally I will
+          respect any requests to take a photo down, if you have reason to
+          believe a particular picture ought to remain private. Get in touch
+          with me via email at
+          <a href="mailto:maxfmckay@gmail.com">maxfmckay@gmail.com</a>.
+        </p>
+        <p>
+          Lindsay was born in Te Awamutu, New Zealand on 22nd November 1946.
+          Daughter to Alfred and Fredda Duncalfe. Sister to Hilary and Ken.
+          Mother to Tracey, Felix, and Rupert. In 2005 Lindsay died to lung
+          cancer.
         </p>
       </article>
       <article>
