--- a/index.html
+++ b/index.html
@@ -2,34 +2,16 @@
 <html lang="en">
   <head>
     <head>
-      <!-- HTML Meta Tags -->
       <title>Lindsay</title>
       <meta charset="utf-8" />
-      <meta name="description" content="Memories of Lindsay." />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-      <!-- Facebook Meta Tags -->
+      <meta name="description" content="Memories of my mother." />
       <meta property="og:url" content="https://fildon.me/lindsay" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Lindsay" />
-      <meta property="og:description" content="Memories of Lindsay." />
+      <meta property="og:description" content="Memories of my mother." />
       <meta
         property="og:image"
-        content="https://raw.githubusercontent.com/fildon/train-ride/main/train-ride.png"
-      />
-      <meta property="og:image:type" content="image/png" />
-      <meta property="og:image:width" content="1280" />
-      <meta property="og:image:height" content="640" />
-
-      <!-- Twitter Meta Tags -->
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta property="twitter:domain" content="fildon.me" />
-      <meta property="twitter:url" content="https://fildon.me/lindsay" />
-      <meta name="twitter:title" content="Lindsay" />
-      <meta name="twitter:description" content="Memories of Lindsay." />
-      <meta
-        name="twitter:image"
-        content="https://raw.githubusercontent.com/fildon/train-ride/main/train-ride.png"
+        content="https://fildon.me/lindsay/pictures/lindsayhat.jpg"
       />
       <link rel="stylesheet" href="reset.css" />
       <link rel="stylesheet" href="styles.css" />
@@ -158,11 +140,22 @@
         </p>
       </article>
       <article>
+        <img src="pictures/lindsay1961.jpg" loading="lazy" />
+        <p>
+          Hand writing on the back reads: "12 Kensington Ave. Lindsay Duncalfe
+          (14½). Auckland May Holiday 10th 1961."
+        </p>
+      </article>
+      <article>
         <img src="pictures/peterlindsay1963.jpg" loading="lazy" />
         <p>
           Hand writing on the back reads: "Sec. School Charity Ball Hamilton.
           Peter Craig + Lins June 1963".
         </p>
+      </article>
+      <article>
+        <img src="pictures/duncalfefamilyportrait.jpg" loading="lazy" />
+        <p>Lindsay, Alf, Ken, Fredda, and Hilary.</p>
       </article>
       <article>
         <img src="pictures/21stbirthday.jpg" loading="lazy" />
@@ -173,12 +166,16 @@
         <p>Ken and Lindsay cut the cake at their 21st birthday.</p>
       </article>
       <article>
-        <img src="pictures/kenlindsay.jpg" loading="lazy" />
-        <p>Ken and Lindsay at their 21st birthday.</p>
+        <img src="pictures/kenlindsayparty.jpg" loading="lazy" />
+        <p>Hand writing on the back reads: "21st BIRTHDAY. Ken + Lindsay."</p>
       </article>
       <article>
         <img src="pictures/lindsayfriends.jpg" loading="lazy" />
-        <p>Lindsay and friends. Possibly taken during 21st birthday party.</p>
+        <p>Lindsay and friends.</p>
+      </article>
+      <article>
+        <img src="pictures/kenlindsay.jpg" loading="lazy" />
+        <p>Ken and Lindsay.</p>
       </article>
       <article>
         <img src="pictures/fishing1967.jpg" loading="lazy" />
@@ -209,6 +206,10 @@
         </p>
       </article>
       <article>
+        <img src="pictures/hilarybridesmaid.png" loading="lazy" />
+        <p>Hilary. Appears to be dressed as a bridesmaid.</p>
+      </article>
+      <article>
         <img src="pictures/lindsayplusone.jpg" loading="lazy" />
         <p>Lindsay and unknown.</p>
       </article>
@@ -217,20 +218,30 @@
         <p>Lindsay and unknown.</p>
       </article>
       <article>
-        <img src="pictures/hilarybridesmaid.png" loading="lazy" />
-        <p>Hilary. Appears to be dressed as a bridesmaid.</p>
+        <img src="pictures/hilaryken.jpg" loading="lazy" />
+        <p>Hilary and Ken.</p>
       </article>
       <article>
         <img src="pictures/hilary.jpg" loading="lazy" />
-        <p>Hilary.</p>
+        <p>
+          Hilary. This appears to be a cropped duplicate of the prior photo.
+        </p>
       </article>
       <article>
         <img src="pictures/lindsaybridesmaid.jpg" loading="lazy" />
         <p>Lindsay. Dressed as a bridesmaid.</p>
       </article>
       <article>
+        <img src="pictures/duncalfecar.jpg" loading="lazy" />
+        <p>Fredda and Alf. The label reads: "Richard Wallace. Otorohanga".</p>
+      </article>
+      <article>
         <img src="pictures/duncalfes.jpg" loading="lazy" />
         <p>Fredda and Alf outside the house in McNair Road.</p>
+      </article>
+      <article>
+        <img src="pictures/lindsayhat.jpg" loading="lazy" />
+        <p>Lindsay.</p>
       </article>
       <article>
         <img src="pictures/lindsayandfriends.jpg" loading="lazy" />
@@ -263,6 +274,18 @@
         <p>
           Hugh Meller and Lindsay get married. Hand writing on the back reads:
           "03.07.1981"
+        </p>
+      </article>
+      <article>
+        <img src="pictures/envelope1982.jpg" loading="lazy" />
+        <img src="pictures/envelopeback1982.jpg" loading="lazy" />
+        <p>
+          This letter was sent from Fredda in Te Awamutu, New Zealand to Lindsay
+          in Devon, England on 28th January 1982. My mother kept this letter for
+          over 20 years; until her death. I have kept it for nearly 20 more.
+          Inside is a letter four pages long. It would violate their privacy to
+          transcribe it here. But I will share that it begins: "Dear Lins". And
+          ends: "Love ma."
         </p>
       </article>
       <article>
@@ -320,9 +343,13 @@
       </article>
       <article>
         <img src="pictures/beach.jpg" loading="lazy" />
+        <p>Rupert, Lindsay, and Felix at the seaside. Year unknown.</p>
+      </article>
+      <article>
+        <img src="pictures/brittany1993.jpg" loading="lazy" />
         <p>
-          Rupert, Lindsay and Felix at the beach. Year unknown. Early 1990s at a
-          guess.
+          Lindsay, Rupert, and Felix. Hand writing on picture frame reads:
+          "Brittany 1993".
         </p>
       </article>
       <article>
@@ -330,6 +357,13 @@
         <p>
           Lindsay, Rupert, and Felix. Hand writing on the back reads: "C.May
           1995".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/117stjames.jpg" loading="lazy" />
+        <p>
+          Rupert, Lindsay, Richard, and Felix. Taken in the back garden of 117
+          St. James Road.
         </p>
       </article>
       <article>
@@ -342,9 +376,16 @@
         </p>
       </article>
       <article>
+        <img src="pictures/lindsaygraduation.jpg" loading="lazy" />
+        <p>
+          Lindsay graduates with an MA in Child Law. Hand writing on the back
+          reads: "June 1999".
+        </p>
+      </article>
+      <article>
         <img src="pictures/christmas.jpg" loading="lazy" />
         <p>
-          Lindsay and Toni at Christmas. Likely taken at 117 St. James Road,
+          Lindsay and Toni at Christmas. Taken at 117 St. James Road,
           Southampton.
         </p>
       </article>
@@ -357,8 +398,12 @@
         </p>
       </article>
       <article>
+        <img src="pictures/alexlindsayrupert.jpg" loading="lazy" />
+        <p>Alexander Von Benckendorff, Lindsay, and Rupert in 2003.</p>
+      </article>
+      <article>
         <img src="pictures/lindsayalf.jpg" loading="lazy" />
-        <p>Lindsay and Alf. Likely taken during 2003.</p>
+        <p>Lindsay and Alf in 2003.</p>
       </article>
       <article>
         <img src="pictures/june2004.jpg" loading="lazy" />
@@ -382,6 +427,13 @@
         <p>
           A collage of photos from Felix's graduation. Some printer ink appears
           to have run in splotches on the upper left.
+        </p>
+      </article>
+      <article>
+        <img src="pictures/117stjamesbw.jpg" loading="lazy" />
+        <p>
+          Rupert, Lindsay, and Felix. Taken in the back garden of 117 St. James
+          Road.
         </p>
       </article>
       <footer>Created by <a href="https://fildon.me">Rupert McKay</a></footer>
