Minor text edits

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>
           Lindsay was born in Te Awamutu, New Zealand on 22nd November 1946.
           Daughter to Alfred and Fredda Duncalfe. Sister to Hilary and Ken.
-          Mother to Tracey, Felix, and Rupert. In 2005 Lindsay died to lung
+          Mother to Tracey, Felix, and Rupert. In 2005 Lindsay died of lung
           cancer.
         </p>
       </article>
@@ -56,8 +56,8 @@
         <img src="pictures/freddalake.jpg" loading="lazy" />
         <p>
           Fredda, the day she found out she was pregnant with her first child.
-          Hand writing on the back reads: "Taken by the avon river chch June
-          1943. <em>Isn't she beautiful!</em>".
+          Hand writing on the back reads: "Taken by the avon river ch June 1943.
+          <em>Isn't she beautiful!</em>".
         </p>
       </article>
       <article>
@@ -247,7 +247,7 @@
         <img src="pictures/lindsayandfriends.jpg" loading="lazy" />
         <p>
           A pair of photos. In the top is Lindsay and friend Sally. In the
-          bottom is unknown and Lindsay.
+          bottom is Al and Lindsay.
         </p>
       </article>
       <article>
@@ -311,11 +311,7 @@
       </article>
       <article>
         <img src="pictures/parents.jpg" loading="lazy" />
-        <p>
-          Lindsay, Rupert, and Lindsay. Hand writing on the back reads: "Simcha.
-          N & M. Kathy. Jean. Debbie." I don't understand why that is what is
-          written on the back.
-        </p>
+        <p>Lindsay, Rupert, and Lindsay.</p>
       </article>
       <article>
         <img src="pictures/valentines1988.jpg" loading="lazy" />
@@ -342,14 +338,17 @@
         <p>Lindsay. Hand writing on the back reads: "1990?"</p>
       </article>
       <article>
-        <img src="pictures/beach.jpg" loading="lazy" />
-        <p>Rupert, Lindsay, and Felix at the seaside. Year unknown.</p>
-      </article>
-      <article>
         <img src="pictures/brittany1993.jpg" loading="lazy" />
         <p>
           Lindsay, Rupert, and Felix. Hand writing on picture frame reads:
           "Brittany 1993".
+        </p>
+      </article>
+      <article>
+        <img src="pictures/beach.jpg" loading="lazy" />
+        <p>
+          Rupert, Lindsay, and Felix at the seaside. Also taken in Brittany
+          1993.
         </p>
       </article>
       <article>
@@ -399,7 +398,10 @@
       </article>
       <article>
         <img src="pictures/alexlindsayrupert.jpg" loading="lazy" />
-        <p>Alexander Von Benckendorff, Lindsay, and Rupert in 2003.</p>
+        <p>
+          Alexander Von Benckendorff, Lindsay, and Rupert, taken in New Zealand
+          in 2003.
+        </p>
       </article>
       <article>
         <img src="pictures/lindsayalf.jpg" loading="lazy" />
