--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </article>
       <article>
         <img src="pictures/baby.jpg" loading="lazy" />
-        <p>I'm guessing, but I think this must be Hilary.</p>
+        <p>This is probably Hilary.</p>
       </article>
       <article>
         <img src="pictures/twincakes.jpg" loading="lazy" />
