Correct spelling for Sallie

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <article>
         <img src="pictures/lindsayandfriends.jpg" loading="lazy" />
         <p>
-          A pair of photos. In the top is Lindsay and friend Sally. In the
+          A pair of photos. In the top is Lindsay and friend Sallie. In the
           bottom is Al and Lindsay.
         </p>
       </article>
