Outsourced historic details

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       </article>
       <article>
         <img src="pictures/lindsaybridesmaid.jpg" loading="lazy" />
-        <p>Lindsay. Dressed as a bridesmaid.</p>
+        <p>Lindsay as a bridesmaid at Sallie Berriff's wedding.</p>
       </article>
       <article>
         <img src="pictures/duncalfecar.jpg" loading="lazy" />
@@ -329,8 +329,8 @@
       <article>
         <img src="pictures/thermal1990.jpg" loading="lazy" />
         <p>
-          Lindsay in water. Hand writing on the back reads: "Natural thermal
-          waterhole near Waiotapu 8th January 1990".
+          Lindsay in the water at Kerosene Creek. Hand writing on the back
+          reads: "Natural thermal waterhole near Waiotapu 8th January 1990".
         </p>
       </article>
       <article>
@@ -405,7 +405,10 @@
       </article>
       <article>
         <img src="pictures/lindsayalf.jpg" loading="lazy" />
-        <p>Lindsay and Alf in 2003.</p>
+        <p>
+          Lindsay and Alf in 2003. Taken at Westhaven in Auckland shortly after
+          Luke Duncalfe's graduation
+        </p>
       </article>
       <article>
         <img src="pictures/june2004.jpg" loading="lazy" />
