Minor copy changes

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <p>
           Lindsay was born in Te Awamutu, New Zealand on 22nd November 1946.
           Daughter to Alfred and Fredda Duncalfe. Sister to Hilary and Ken.
-          Mother to Tracey, Felix, and Rupert. In 2005 Lindsay died of lung
-          cancer.
+          Mother to Tracey, Felix, and Rupert. In 2005 Lindsay died of cancer.
         </p>
       </article>
       <article>
@@ -305,8 +304,16 @@
       <article>
         <img src="pictures/gatheringlate80s.jpg" loading="lazy" />
         <p>
-          A large family gathering. Back row: Rupert, Lindsay, Lindsay, ?, Jill,
-          Alf, ?, ?, ?, Ken, ?. Front row: Felix, Amber, Renay, Luke, ?, ?.
+          A large family gathering.
+          <ul>
+            <li>
+              <strong>Back row</strong>: Rupert, Lindsay, Lindsay, ?, Jill, Alf,
+              Norm, ?, ?, Ken, Ruth.
+            </li>
+            <li>
+              <strong>Front row</strong>: Felix, Amber, Renay, Luke, Roshni, Ravi.
+            </li>
+          </ul>
         </p>
       </article>
       <article>
